Refactored relationship handling by removing direct relationship fields in `Person`, introduced `FamilyRelationshipDTO`, updated services and tests accordingly; upgraded Java version to 21 and Testcontainers to 1.21.4.